// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/menu/SubmenuItem render() should correctly render correctly when isDisabled is true 1`] = `
<li
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="true"
  className="menu-item submenu-target"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    key=".0"
  />
  <Arrow16
    className="menu-item-arrow"
    height={12}
    width={12}
  />
  <div
    className="submenu"
    initialFocusIndex={null}
    isHidden={true}
    isSubmenu={true}
    key=".1"
    onClose={[Function]}
    setRef={[Function]}
  />
</li>
`;

exports[`components/menu/SubmenuItem render() should correctly render correctly when isSubmenuOpen is true 1`] = `
<li
  aria-expanded="true"
  aria-haspopup="true"
  className="menu-item submenu-target"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    key=".0"
  />
  <Arrow16
    className="menu-item-arrow"
    height={12}
    width={12}
  />
  <div
    className="submenu"
    initialFocusIndex={null}
    isHidden={false}
    isSubmenu={true}
    key=".1"
    onClose={[Function]}
    setRef={[Function]}
  />
</li>
`;

exports[`components/menu/SubmenuItem render() should correctly render default component 1`] = `
<li
  aria-expanded="false"
  aria-haspopup="true"
  className="menu-item submenu-target"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    key=".0"
  />
  <Arrow16
    className="menu-item-arrow"
    height={12}
    width={12}
  />
  <div
    className="submenu"
    initialFocusIndex={null}
    isHidden={true}
    isSubmenu={true}
    key=".1"
    onClose={[Function]}
    setRef={[Function]}
  />
</li>
`;
